[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycorekit"
version = "0.1.0"
description = "Core utilities for GenAI projects"
authors = [
    { name = "Ankit" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
